--- a/app/src/main/res/layout/overview_list_items.xml
+++ b/app/src/main/res/layout/overview_list_items.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/flatWhiteSmoke"
+    android:orientation="horizontal"
     android:paddingTop="20dp"
     android:paddingBottom="10dp">
 
@@ -13,10 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="left"
-        android:text="TextView"
-        android:textSize="18sp"
         android:paddingLeft="20dp"
         android:paddingTop="5dp"
+        android:text="TextView"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -30,9 +30,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="TextView"
             android:paddingRight="20dp"
-            android:paddingBottom="2dp" />
+            android:paddingBottom="2dp"
+            android:text="TextView" />
 
         <TextView
             android:id="@+id/lastPracticed"
@@ -40,8 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="TextView"
             android:paddingRight="20dp"
-            android:paddingBottom="5dp" />
+            android:paddingBottom="5dp"
+            android:text="TextView" />
     </LinearLayout>
 </LinearLayout>
