--- a/app/src/main/res/menu/overview_list_context_menu.xml
+++ b/app/src/main/res/menu/overview_list_context_menu.xml
@@ -2,16 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/copy_word"
-        android:title="@string/copy_word"
-        android:orderInCategory="100" />
+        android:orderInCategory="100"
+        android:title="@string/copy_word" />
 
     <item
         android:id="@+id/bookmark"
-        android:title="@string/bookmark"
-        android:orderInCategory="103" />
+        android:orderInCategory="103"
+        android:title="@string/bookmark" />
 
     <item
         android:id="@+id/learn_on_duolingo"
-        android:title="@string/learn_on_duolingo"
-        android:orderInCategory="104" />
+        android:orderInCategory="104"
+        android:title="@string/learn_on_duolingo" />
 </menu>
